# learnrobotics

./: CMakeLists.txt  README.md  package.xml
config/: config.rviz
doc/: center_of_mass.txt
launch/: gazebo.launch  robot.launch  rviz.launch
model/gazebo/: model.config
model/gazebo/a/: model.config  model.sdf
model/gazebo/b/: model.config  model.sdf
model/gazebo/learnbotics/: model.sdf
model/gazebo/learnbotics2/: model.config  model.sdf
model/gazebo_tutorial/my_vehicle/: model.sdf
model/gazebo_tutorial/velodyne/: model.config  model.sdf  velodyne.world  velodyne2.world
model/gazebo_tutorial/velodyne/mesh/: base.stl  top.stl
model/stl/modified/: EsferaNoCentro.stl  RodaNoCentro.stl  RodaNoCentroEspelhada.stl  complete_robot.stl
model/urdf/: robot.xacro
src/: vel.cpp  velocity_control_velodyne.cpp  velodyne_plugin.cpp
