<?xml version="1.0"?>
<package format="2">
  <name>velodyne_plugin</name>
  <version>0.0.0</version>
  <description>gazebo tutorial</description>

  <maintainer email="tecchio@todo.todo">tecchio</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>gazebo</build_depend>
  <build_export_depend>gazebo</build_export_depend>
  <exec_depend>gazebo</exec_depend>

  <export>

  </export>
</package>